tests/reference/run-array_bounds_check_10-b69c804.stderr
runtime error: Array shape mismatch in binary operation with operands 'a' and 'b'. Tried to match size 2 of dimension 2 of 'a' with size 3 of dimension 2 of 'b'.
 --> tests/errors/array_bounds_check_10.f90:9:9
  |
9 |     e = a + b
  |         ^ LHS size is 2
  |
9 |     e = a + b
  |             ^ RHS size is 3
